# lxpy-apitest

./: .gitignore  .travis.yml  README.md  pyproject.toml
lxpy_api/.pytest_cache/: .coverage
lxpy_api/.pytest_cache/v/cache/: nodeids
tests/: test_core.py
